# redflag-ai

./: README.md  pyproject.toml
backend/redflag_ai/: __init__.py  document_structure.py  fs.py  hierarchy.py  llm.py  playground.py  server.py  verifier.py  workflow.py  workspace.py
data/large_acquisition/: TEST_QUESTIONS.md
data/test_acquisition/: TEST_QUESTIONS.md
fs_explorer/: __init__.py  document_structure.py  fs.py  models.py  router.py  server.py  ui.html  versioning.py  workflow.py  workspace.py
src/fs_explorer/: __init__.py  agent.py  legacy-ui.html  llm.py  main.py  playground.py  reference_map.py  server.py  ui.html  verifier.py  workspace.py
