[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "backend"

[project]
name = "redflag-ai"
version = "0.1.0"
description = "Explore and understand your filesystem better with AI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.5",
    "fastapi>=0.115.0",
    "google-genai>=1.55.0",
    "groq>=0.25.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "llama-index-workflows>=2.11.5",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.27",
    "reportlab>=4.4.7",
    "rich>=13.0.0",
    "typer>=0.12.5,<0.20.0",
    "uvicorn>=0.34.0",
    "websockets>=14.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
    "ty>=0.0.1a33",
]

[project.scripts]
explore = "redflag_ai.main:app"
explore-ui = "redflag_ai.server:run_server"
